link-color-changed

--- a/css/core-style.css
+++ b/css/core-style.css
@@ -46,7 +46,7 @@ a {
   transition: all 500ms ease 0s;
   text-decoration: none;
   outline: 0 solid transparent;
-  color: #000000;
+  color: #fbf5f5;
   font-weight: 600;
   font-size: 12px; }
   a:hover, a:focus {
